--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "next": "15.2.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
