--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
-    "next": "15.2.0",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-credit-cards": "^0.8.3",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.1",
